--- a/index.html
+++ b/index.html
@@ -172,6 +172,34 @@
             .love-letter::before {
                 font-size: 0.9rem;
             }
+            
+        }
+        /* Style for the Spotify embed */
+        .spotify-embed {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1000;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 15px;
+            padding: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            width: 90%; /* Responsive width */
+            max-width: 300px; /* Maximum width for larger screens */
+        }
+
+        .spotify-embed iframe {
+            border-radius: 12px;
+            border: none;
+            width: 100%; /* Full width of the container */
+            height: 80px; /* Default height for mobile */
+        }
+
+        /* Adjust height for larger screens */
+        @media (min-width: 600px) {
+            .spotify-embed iframe {
+                height: 152px; /* Larger height for desktop */
+            }
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -263,6 +291,12 @@
         <div class="love-letter" onclick="revealLetter()">
             <p id="letterText">Click to open my heart...</p>
         </div>
+    </div>
+    <div class="spotify-embed">
+
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2psRActEWsTlYYd7EDoyVR?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+
+        </iframe>
     </div>
 
     <script>
