--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <div class="container">
         <div class="header">
             <h1>🌸 1500 Reasons I Love You 🌸</h1>
-            <h2>My Dearest [Her Name]</h2>
+            <h2>My Dearest Jisscalito</h2>
         </div>
 
         <div class="counter">
